Fix: alignment of icon and text in button comp0nent

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,6 +10,7 @@
     font-size: $smallest-text;
     user-select: none;
     display: flex;
+    align-items: center;
     background: none;
 }
 
